[gd_scene load_steps=17 format=4 uid="uid://duo0g7asg8hy8"]

[ext_resource type="Script" uid="uid://bsnwnle8qjep0" path="res://scenes/Maps/house/house_level.gd" id="1_j2eob"]
[ext_resource type="PackedScene" uid="uid://b5ljrwmuctd3u" path="res://scenes/props/doors.tscn" id="1_tw7bn"]
[ext_resource type="PackedScene" uid="uid://dkhabu48y37ca" path="res://scenes/props/MusicScene.tscn" id="1_wo2ky"]
[ext_resource type="Script" uid="uid://lxj3cday7f6m" path="res://scenes/Maps/house/to_musi_tubyc.gd" id="2_csr2j"]
[ext_resource type="Texture2D" uid="uid://col7y354dtvnk" path="res://assets/handmade/tileset dom.png" id="2_wo2ky"]
[ext_resource type="PackedScene" uid="uid://dba6tbl6tl0go" path="res://scenes/player.tscn" id="3_a6b50"]
[ext_resource type="PackedScene" uid="uid://bvmqjptcybqc0" path="res://scenes/props/player_body_camera.tscn" id="4_scscm"]
[ext_resource type="PackedScene" uid="uid://cmxvf8myyfhsa" path="res://scenes/UI/actionable.tscn" id="6_scscm"]
[ext_resource type="Resource" uid="uid://i14fhfqel8fp" path="res://dialogue/Player.dialogue" id="7_j2eob"]
[ext_resource type="PackedScene" uid="uid://mn411bco744v" path="res://scenes/NPCs/Ania.tscn" id="7_wwr7u"]
[ext_resource type="PackedScene" uid="uid://cli2rs3k6r1k8" path="res://scenes/NPCs/Robert.tscn" id="8_csr2j"]
[ext_resource type="Resource" uid="uid://bghfdpt778kxp" path="res://dialogue/Day3.dialogue" id="9_wwr7u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mh8do"]
texture = ExtResource("2_wo2ky")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0
0:10/0 = 0
1:10/0 = 0
7:1/0 = 0
7:2/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
7:5/0 = 0
7:4/0 = 0
7:3/0 = 0
8:1/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
1:11/0 = 0
1:12/0 = 0
1:13/0 = 0
1:14/0 = 0
1:15/0 = 0
1:16/0 = 0
0:16/0 = 0
0:15/0 = 0
0:14/0 = 0
0:13/0 = 0
0:12/0 = 0
0:11/0 = 0
2:12/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
7:0/0 = 0
8:0/0 = 0
1:3/0 = 0
1:2/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
14:5/0 = 0
14:4/0 = 0
14:3/0 = 0
14:2/0 = 0
14:1/0 = 0
14:0/0 = 0
15:0/0 = 0
13:0/0 = 0
13:1/0 = 0
13:2/0 = 0
13:3/0 = 0
13:4/0 = 0
13:5/0 = 0
12:5/0 = 0
12:4/0 = 0
12:3/0 = 0
12:2/0 = 0
12:1/0 = 0
12:0/0 = 0
11:0/0 = 0
10:0/0 = 0
10:1/0 = 0
11:1/0 = 0
11:2/0 = 0
11:3/0 = 0
11:4/0 = 0
11:5/0 = 0
11:6/0 = 0
10:6/0 = 0
9:6/0 = 0
9:5/0 = 0
10:5/0 = 0
10:4/0 = 0
10:3/0 = 0
10:2/0 = 0
19:5/0 = 0
19:4/0 = 0
19:3/0 = 0
19:2/0 = 0
19:1/0 = 0
12:7/0 = 0
13:7/0 = 0
12:8/0 = 0
13:8/0 = 0
14:7/0 = 0
14:8/0 = 0
15:7/0 = 0
15:6/0 = 0
15:8/0 = 0
14:6/0 = 0

[sub_resource type="TileSet" id="TileSet_w740c"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_mh8do")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30cg0"]
size = Vector2(20, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ei4f"]
size = Vector2(51, 56)

[node name="HouseLevel" type="Node2D"]
script = ExtResource("1_j2eob")

[node name="ToMusiTubyc" type="Node" parent="."]
script = ExtResource("2_csr2j")

[node name="MusicScene" parent="." instance=ExtResource("1_wo2ky")]
position = Vector2(-56, 32)
songs = 4
volume = 0.629
fade_in_time_msec = 10000

[node name="Doors" type="Node2D" parent="."]

[node name="HouseEntryDoor" parent="Doors" instance=ExtResource("1_tw7bn")]
position = Vector2(160, -48)
orientation = 0
next_scene = 2
id = 1
are_doors_closed = true

[node name="HouseToiletDoor" parent="Doors" instance=ExtResource("1_tw7bn")]
position = Vector2(64, -48)
orientation = 2
next_scene = 4
id = 2

[node name="HouseBedroomDoor" parent="Doors" instance=ExtResource("1_tw7bn")]
position = Vector2(-96, -48)
orientation = 2
next_scene = 5
id = 3

[node name="HouseClosedDoor" parent="Doors" instance=ExtResource("1_tw7bn")]
position = Vector2(-144, -48)
orientation = 2
next_scene = 11
id = 4
are_doors_closed = true

[node name="Tilesets" type="Node2D" parent="."]

[node name="PhysicsLayer" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, 3)
tile_map_data = PackedByteArray("AAAAAP//AQAEAAAAAAABAP//AQAEAAAAAAACAP//AQAEAAAAAAADAP//AQAEAAAAAAAEAP//AQAEAAAAAAAFAP//AQAEAAAAAAAGAP//AQAEAAAAAAAHAP//AQAEAAAAAAAIAP//AQAEAAAAAAAJAP//AQAEAAAAAAAKAP//AQAEAAAAAAALAP//AQAEAAAAAAALAP7/AQAEAAAAAAALAP3/AQAEAAAAAAALAPz/AQAEAAAAAAALAPv/AQAEAAAAAAALAPn/AQAEAAAAAAAKAPn/AQAEAAAAAAAJAPn/AQAEAAAAAAAIAPn/AQAEAAAAAAAGAPn/AQAEAAAAAAAHAPn/AQAEAAAAAAAFAPn/AQAEAAAAAAAEAPn/AQAEAAAAAAADAPn/AQAEAAAAAAABAPn/AQAEAAAAAAACAPn/AQAEAAAAAAAAAPn/AQAEAAAAAAAKAPr/AQAEAAAAAAAKAPv/AQAEAAAAAAAKAPz/AQAEAAAAAAAKAP3/AQAEAAAAAAAKAP7/AQAEAAAAAAD/////AQAEAAAAAAD+////AQAEAAAAAAD9////AQAEAAAAAAD8////AQAEAAAAAAD7////AQAEAAAAAAD6////AQAEAAAAAAD5////AQAEAAAAAAD4////AQAEAAAAAAD3////AQAEAAAAAAD2////AQAEAAAAAAD1////AQAEAAAAAAD1//n/AQAEAAAAAAD2//n/AQAEAAAAAAD3//n/AQAEAAAAAAD4//n/AQAEAAAAAAD5//n/AQAEAAAAAAD6//n/AQAEAAAAAAD7//n/AQAEAAAAAAD8//n/AQAEAAAAAAD9//n/AQAEAAAAAAD+//n/AQAEAAAAAAD///n/AQAEAAAAAAD0////AQAEAAAAAADz////AQAEAAAAAADz//7/AQAEAAAAAADz//3/AQAEAAAAAADz//z/AQAEAAAAAADz//v/AQAEAAAAAADz//r/AQAEAAAAAADz//n/AQAEAAAAAAD0//n/AQAEAAAAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="Background" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAAJAP7/AQALAAAAAAAIAP7/AQALAAAAAAAHAP7/AQALAAAAAAAGAP7/AQALAAAAAAAFAP7/AQALAAAAAAAEAP7/AQALAAAAAAADAP7/AQALAAAAAAACAP7/AQALAAAAAAABAP7/AQALAAAAAAAAAP7/AQALAAAAAAD///7/AQALAAAAAAD+//7/AQALAAAAAAD9//7/AQALAAAAAAD8//7/AQALAAAAAAD7//7/AQALAAAAAAD6//7/AQALAAAAAAD5//7/AQALAAAAAAD4//7/AQALAAAAAAD3//7/AQALAAAAAAD2//7/AQALAAAAAAD3//r/AQAKAAAAAAD3//v/AQAKAAAAAAD3//z/AQAKAAAAAAD3//3/AQAKAAAAAAD4//r/AQAKAAAAAAD4//v/AQAKAAAAAAD4//z/AQAKAAAAAAD4//3/AQAKAAAAAAD5//r/AQAKAAAAAAD5//v/AQAKAAAAAAD5//z/AQAKAAAAAAD5//3/AQAKAAAAAAD6//r/AQAKAAAAAAD6//v/AQAKAAAAAAD7//r/AQAKAAAAAAD7//v/AQAKAAAAAAD8//r/AQAKAAAAAAD8//v/AQAKAAAAAAD8//z/AQAKAAAAAAD8//3/AQAKAAAAAAD9//r/AQAKAAAAAAD9//v/AQAKAAAAAAD9//z/AQAKAAAAAAD9//3/AQAKAAAAAAD+//r/AQAKAAAAAAD+//v/AQAKAAAAAAD+//z/AQAKAAAAAAD+//3/AQAKAAAAAAD///r/AQAKAAAAAAD///v/AQAKAAAAAAD///z/AQAKAAAAAAD///3/AQAKAAAAAAAAAPr/AQAKAAAAAAAAAPv/AQAKAAAAAAAAAPz/AQAKAAAAAAAAAP3/AQAKAAAAAAABAPr/AQAKAAAAAAABAPv/AQAKAAAAAAABAPz/AQAKAAAAAAABAP3/AQAKAAAAAAACAPr/AQAKAAAAAAACAPv/AQAKAAAAAAACAPz/AQAKAAAAAAACAP3/AQAKAAAAAAADAPr/AQAKAAAAAAADAPv/AQAKAAAAAAADAPz/AQAKAAAAAAADAP3/AQAKAAAAAAAEAPr/AQAKAAAAAAAEAPv/AQAKAAAAAAAEAPz/AQAKAAAAAAAEAP3/AQAKAAAAAAAFAPr/AQAKAAAAAAAFAPv/AQAKAAAAAAAFAPz/AQAKAAAAAAAFAP3/AQAKAAAAAAAGAPr/AQAKAAAAAAAGAPv/AQAKAAAAAAAGAPz/AQAAAAYAAAAGAP3/AQAAAAcAAAAHAPr/AQAKAAAAAAAHAPv/AQAKAAAAAAAHAPz/AQABAAYAAAAHAP3/AQABAAcAAAAIAPr/AQAKAAAAAAAIAPv/AQAKAAAAAAAIAPz/AQAKAAAAAAAIAP3/AQAKAAAAAAAJAPr/AQAKAAAAAAAJAPv/AQAKAAAAAAAJAPz/AQAKAAAAAAAJAP3/AQAKAAAAAAD2//3/AQAKAAAAAAD2//z/AQAKAAAAAAD2//v/AQAKAAAAAAD2//r/AQAKAAAAAAAHAP//AQAEAAQAAAAHAAAAAQAEAAUAAAAIAP//AQAFAAQAAAAIAAAAAQAFAAUAAAAJAP//AQAGAAQAAAAJAAAAAQAGAAUAAAAEAP//AQAEAAQAAAAEAAAAAQAEAAUAAAAFAP//AQAFAAQAAAAFAAAAAQAFAAUAAAAGAP//AQAGAAQAAAAGAAAAAQAGAAUAAAABAP//AQAEAAQAAAABAAAAAQAEAAUAAAACAP//AQAFAAQAAAACAAAAAQAFAAUAAAADAP//AQAGAAQAAAADAAAAAQAGAAUAAAD+////AQAEAAQAAAD+/wAAAQAEAAUAAAD/////AQAFAAQAAAD//wAAAQAFAAUAAAAAAP//AQAGAAQAAAAAAAAAAQAGAAUAAAD7////AQAEAAQAAAD7/wAAAQAEAAUAAAD8////AQAFAAQAAAD8/wAAAQAFAAUAAAD9////AQAGAAQAAAD9/wAAAQAGAAUAAAD4////AQAEAAQAAAD4/wAAAQAEAAUAAAD5////AQAFAAQAAAD5/wAAAQAFAAUAAAD6////AQAGAAQAAAD6/wAAAQAGAAUAAAD1////AQAEAAQAAAD1/wAAAQAEAAUAAAD2////AQAFAAQAAAD2/wAAAQAFAAUAAAD3////AQAGAAQAAAD3/wAAAQAGAAUAAAD1//r/AQAKAAAAAAD6//z/AQAKAAAAAAD7//z/AQAKAAAAAAD7//3/AQAKAAAAAAD6//3/AQAKAAAAAAD1//v/AQAKAAAAAAD1//z/AQAKAAAAAAD1//3/AQAKAAAAAAD0//r/AQAKAAAAAAD1//7/AQALAAAAAAD0////AQAGAAQAAAD0/wAAAQAGAAUAAAD0//7/AQALAAAAAAD0//3/AQAKAAAAAAD0//z/AQAKAAAAAAD0//v/AQAKAAAAAADz//v/AQAMAAAAAADz//z/AQAKAAMAAADz//3/AQAMAAAAAADz//7/AQAKAAMAAADz////AQAMAAAAAADz/wAAAQALAAIAADA=")
tile_set = SubResource("TileSet_w740c")

[node name="Asymmetrical Background" type="TileMapLayer" parent="Tilesets"]
position = Vector2(24, -16)
tile_set = SubResource("TileSet_w740c")

[node name="SceneProps" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAADAPz/AQAAAAEAAAADAP3/AQAAAAIAAAADAP7/AQAAAAMAAAAEAPz/AQABAAEAAAAEAP3/AQABAAIAAAAEAP7/AQABAAMAAAAGAP3/AQACAAAAAAAHAP3/AQADAAAAAAAGAPz/AQACAAAAAAAHAPz/AQADAAAAAAD6//z/AQABAAEAAAD6//3/AQABAAIAAAD6//7/AQABAAMAAAD5//z/AQAAAAEAAAD5//3/AQAAAAIAAAD5//7/AQAAAAMAAAD3//z/AQABAAEAAAD3//3/AQABAAIAAAD2//z/AQAAAAEAAAD2//3/AQAAAAIAAAD3//7/AQABAAMAAAD2//7/AQAAAAMAAAD8//z/AQAJAAUAAAD8//3/AQAJAAYAAAD9//z/AQAKAAUAAAD9//3/AQAKAAYAAAD+//z/AQALAAUAAAD+//3/AQALAAYAAAAAAPz/AQAPAAYAAAAAAP3/AQAPAAcAAAAAAP7/AQAPAAgAAAD4//z/AQAPAAYAAAD4//3/AQAPAAcAAAD4//7/AQAPAAgAAAD1//3/AQAOAAYAAAD1//7/AQAOAAcAAAD1////AQAOAAgAAAD0//7/AQANAAcAAAD0////AQANAAgAAAACAP7/AQANAAcAAAACAP//AQANAAgAAAD///7/AQAMAAcAAAD/////AQAMAAgAAAD7//7/AQANAAcAAAD7////AQANAAgAAAD5//r/AQAAAA4AAAD5//v/AQAAAA8AAAD6//r/AQABAA4AAAD6//v/AQABAA8AAAADAPr/AQAAAA4AAAADAPv/AQAAAA8AAAAEAPr/AQABAA4AAAAEAPv/AQABAA8AAAAFAP3/AQACAAwAAAD7//3/AQACAAwAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="SceneProps2" type="TileMapLayer" parent="Tilesets"]
tile_set = SubResource("TileSet_w740c")

[node name="SceneBorders" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAAJAPv/AQAOAAAAAAAJAPz/AQAOAAEAAAAJAP3/AQAOAAIAAAAJAP7/AQAOAAMAAAAJAP//AQAOAAQAAAAJAAAAAQAOAAUAAAAKAPv/AQAPAAAAAAAKAPz/AQAPAAEAAAAKAP3/AQAPAAIAAAAKAP7/AQAPAAMAAAAKAP//AQAPAAQAAAAKAAAAAQAPAAUAAAAJAPr/AQALAAEAAAAIAPr/AQALAAEAAAAHAPr/AQALAAEAAAAGAPr/AQALAAEAAAAFAPr/AQALAAEAAAAEAPr/AQALAAEAAAADAPr/AQAKAAEAAAACAPr/AQAKAAEAAAAAAPr/AQAKAAEAAAABAPr/AQAKAAEAAAD///r/AQAKAAEAAAD+//r/AQAKAAEAAAD9//r/AQAKAAEAAAD7//r/AQAKAAEAAAD8//r/AQAKAAEAAAD6//r/AQALAAEAAAD5//r/AQALAAEAAAD4//r/AQALAAEAAAD2//r/AQALAAEAAAD3//r/AQALAAEAAAD1//r/AQALAAEAAAAKAPr/AQALAAIAAADz//r/AQAKAAIAAAD0//r/AQALAAEAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="SceneBorders2" type="TileMapLayer" parent="Tilesets"]
position = Vector2(-8, 8)
tile_set = SubResource("TileSet_w740c")

[node name="DayOne" type="Node2D" parent="."]

[node name="begin_day_one" parent="DayOne" instance=ExtResource("6_scscm")]
position = Vector2(-1, -34)
dialogue_resource = ExtResource("7_j2eob")
dialogue_start = "begin_day"
automatic_interaction = true
can_be_completed = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DayOne/begin_day_one"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_30cg0")

[node name="DayTwo" type="Node2D" parent="."]

[node name="DayTwoBegin" parent="DayTwo" instance=ExtResource("6_scscm")]
position = Vector2(20, -34)
dialogue_resource = ExtResource("7_j2eob")
dialogue_start = "begin_day"
automatic_interaction = true
can_be_completed = true

[node name="DayThree" type="Node2D" parent="."]

[node name="DayThreeBegin" parent="DayThree" instance=ExtResource("6_scscm")]
position = Vector2(20, -34)
dialogue_resource = ExtResource("7_j2eob")
dialogue_start = "begin_day"
automatic_interaction = true
can_be_completed = true

[node name="Ending" type="Node2D" parent="DayThree"]
visible = false
position = Vector2(-20, -27)

[node name="Ania" parent="DayThree/Ending" instance=ExtResource("7_wwr7u")]
position = Vector2(48, -5)

[node name="Robert" parent="DayThree/Ending" instance=ExtResource("8_csr2j")]
position = Vector2(18, -5)

[node name="EndingWithFriends" parent="DayThree/Ending" instance=ExtResource("6_scscm")]
position = Vector2(28, -7)
dialogue_resource = ExtResource("9_wwr7u")
dialogue_start = "friend_end"
automatic_interaction = true
can_be_completed = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DayThree/Ending/EndingWithFriends"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_3ei4f")

[node name="Player" parent="." instance=ExtResource("3_a6b50")]
position = Vector2(-37, -16)
is_jumping_allowed = false

[node name="PlayerBodyCamera" parent="Player" instance=ExtResource("4_scscm")]
position = Vector2(0, -32)
